libs/toolkit-macros-tests/tests/ui/fail/caps_not_array.stderr
error: capabilities must be an array, e.g. capabilities = [db, rest]
 --> tests/ui/fail/caps_not_array.rs:3:31
  |
3 | #[gear(name="x", capabilities="rest")]
  |                               ^^^^^^
